--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="./assets/gulpfile.js"></script>
+  <script src="./assets/notificationPopUp.js"></script>
 </head>
 <body>
   <app-root></app-root>
